# ableton-cli

./: .gitignore  AGENTS.md  README.ja.md  README.md  pyproject.toml
.claude/skills/ableton-live/: SKILL.md
ableton_cli/: connection.py  main.py
articles/: ableton-cli-introduction.md
remote_scripts/: README.md
remote_scripts/AbletonMCP_Remote_Script/: __init__.py
skills/: README.md
skills/ableton-live/: SKILL.md
